k8s/api_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-homework-api
  labels:
    app: sa-homework-api
spec:
  replicas: 3
  selector:
    matchLabels:
      name: sa-homework-api
  template:
    metadata:
      labels:
        name: sa-homework-api
    spec:
      containers:
        - name: api
          image: zhanlederzach/sa-homework-api-ingress
            initialDelaySeconds: 90
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: sa-homework-api
spec:
  ports:
    - port: 8000
  selector:
    name: sa-homework-api
  type: NodePort

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sa-homework-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: sa-homework-api
              servicePort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sa-homework-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: sa-homework-api
              servicePort: 8000
