k8s/stateful_set.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30007
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-demo
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgredb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-homework-api
  labels:
    app: sa-homework-api
spec:
  replicas: 3
  selector:
    matchLabels:
      name: sa-homework-api
  template:
    metadata:
      labels:
        name: sa-homework-api
    spec:
      containers:
        - name: api
          image: zhanlederzach/sa-homework-api
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: sa-homework-api
spec:
  ports:
    - port: 8000
  selector:
    name: sa-homework-api
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-homework-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.sa.kz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-homework-api
            port:
              number: 8000
